--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Frontend Mentor | QR code component</title>
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700" />
   <link rel="stylesheet" href="./style/stylesheet.css">
 </head>
 
