Add alt for image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="content">
-    <img src="./images/image-qr-code.png" />
+    <img src="./images/image-qr-code.png" alt="QR code for: www.frontendmentor.io" />
     <p class="title">
       Improve your front-end skills by building projects
     </p>
