Add the main landmark

--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 </head>
 
 <body>
-  <div class="content">
-    <img src="./images/image-qr-code.png" alt="QR code for: www.frontendmentor.io" />
-    <p class="title">
-      Improve your front-end skills by building projects
-    </p>
-    <p class="description">
-      Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-    </p>
-  </div>
+  <main>
+    <div class="content">
+      <img src="./images/image-qr-code.png" alt="QR code for: www.frontendmentor.io" />
+      <p class="title">
+        Improve your front-end skills by building projects
+      </p>
+      <p class="description">
+        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      </p>
+    </div>
+  </main>
 </body>
 
 </html>
